fixed CSS overlap in lobby

--- a/public/src/cookieLobby.less
+++ b/public/src/cookieLobby.less
@@ -4,6 +4,7 @@
     align-items: center;
     button{
       margin-left: 0;
+      position: relative;
     }
     margin-top: 5vh;
 }
