--- a/public/src/style.less
+++ b/public/src/style.less
@@ -40,10 +40,10 @@ html {
   height: 100%;
 }
 
-#root {
-  width: 100vw;
-  height: 100vh;
-}
+// #root {
+//   width: 100vw;
+//   height: 100vh;
+// }
 
 .wrapper {
   min-height: 100vh;
